--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Anton|Oxygen" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/100/three.min.js"></script>
     <script src="https://www.vantajs.com/dist/vanta.net.min.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>React Portfolio</title>
+    <link rel="icon" href="http://www.yoursite.com/favicon.ico?v=2" />
   </head>
   <body>
     <div id="root"></div>
