--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/100/three.min.js"></script>
     <script src="https://www.vantajs.com/dist/vanta.net.min.js"></script>
     <link rel="icon" href="http://www.yoursite.com/favicon.ico?v=2" />
+    <link href="../src/all.css" rel="stylesheet"> <!--load all styles -->
   </head>
   <body>
     <div id="root"></div>
